--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
         </div> 
         
         <div class="idea-row">
-            <h2>Arval test</h2>
+            <h2>Bizzare test</h2>
         </div>
         <div class="idea-row grid-2-phone arval-test alternate-2-second-ls-phone tablet-f-reset">
             <div class="idea-3-phone idea-6-ls-phone idea-3-tablet violet">
